--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ nav{
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 70vh;
+    height: 75vh;
     text-align: center;
     gap: 2em;
     background-image: url(img/v856-kul-07.jpg);
@@ -127,9 +127,11 @@ nav{
 .projetos_carrosel{
     background-color: transparent;
     width: 100%;
-    height: 600px;
-    overflow: hidden;
-    
+   
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 80px;
 
 }
 .projetos_item{
