--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ nav{
 .texto_projeto{
     padding: 1.5em;
     font-family: var(--font-primaria);
+     line-height: 1.5;
 }
 .texto_projeto h2{
     font-size: 30px;
